syntax = "proto3";

package com.google.startupos.tools.reviewer.localserver.service;

option java_package = "com.google.startupos.tools.reviewer.localserver.service";
option java_outer_classname = "Protos";

import "common/repo/repo.proto";
import "common/text_difference.proto";

service CodeReviewService {
  // Get a text file's contents
  rpc getFile(FileRequest) returns (FileResponse);
  rpc createDiff(CreateDiffRequest) returns (Empty);
  rpc getTextDiff(TextDiffRequest) returns (TextDiffResponse);
  // returns available diff number and increments stored value by one
  rpc getAvailableDiffNumber(Empty) returns (DiffNumberResponse);
  rpc getDiff(DiffRequest) returns (Diff);
  rpc getDiffFiles(DiffFilesRequest) returns (DiffFilesResponse);
  rpc removeWorkspace(RemoveWorkspaceRequest) returns (Empty);
  rpc ping(Empty) returns (PongResponse);
}

message Empty {}

message FileRequest { string filename = 1; }

message FileResponse { string content = 1; }

message CreateDiffRequest { Diff diff = 1; }

message DiffNumberResponse { int64 last_diff_id = 1; }

message TextDiffRequest {
  com.google.startupos.common.repo.File left_file = 1;
  com.google.startupos.common.repo.File right_file = 2;
}

message TextDiffResponse { com.google.startupos.common.TextDiff text_diff = 1; }

message DiffFilesRequest {
  string workspace = 1;
  int64 diff_id = 2;
}

message DiffFilesResponse {
  repeated com.google.startupos.common.repo.BranchInfo branchInfo = 1;
}

message DiffRequest { int64 diff_id = 1; }

message PongResponse { string message = 1; }

message RemoveWorkspaceRequest { string workspace_name = 1; }

message GithubPr {
  string owner = 1;
  string repo = 2;
  // GitHub Pull Request number (essentially an ID). It is set by GitHub.
  int64 number = 3;
}

// TODO: Separate non-request/response messages into a separate file. This
// resulted in issues
//   when attempted (couldn't import another proto) but maybe they've since been
//   fixed.
message Diff {
  enum Status {
    REVIEW_NOT_STARTED = 0;
    NEEDS_MORE_WORK = 1;
    UNDER_REVIEW = 2;
    ACCEPTED = 3;
    SUBMITTING = 4;
    SUBMITTED = 5;
    REVERTING = 6;
    REVERTED = 7;
  }

  int64 id = 1;
  // The main author of the diff, though certain snapshots can be made by
  // others.
  Author author = 3;
  repeated Reviewer reviewer = 4;
  string description = 5;
  // List of urls to github issues
  repeated string issue = 6;
  Status status = 7;

  string workspace = 8;
  int64 created_timestamp = 9;
  int64 modified_timestamp = 10;
  // Threads on a line
  repeated Thread code_thread = 13;
  repeated string cc = 14;
  // Threads on the whole diff, not on a particular file or line
  repeated Thread diff_thread = 15;
  string modified_by = 16;
  // GitHub PRs associated with this repo.
  repeated GithubPr github_pr = 17;
}

message Reviewer {
  string email = 1;
  bool needs_attention = 2;
  bool approved = 3;
}

message Author {
  string email = 1;
  bool needs_attention = 2;
}

// Comment thread. Note that for whole-diff threads, some fields will be empty
// (e.g repo_id, commit_id).
message Thread {
  enum Type {
    // Thread on a code line
    CODE = 0;
    // Thread on commit (synced from other systems e.g GitHub)
    COMMIT = 1;
    // Thread on repo (synced from other systems e.g GitHub)
    REPO = 2;
    // Thread on whole diff
    DIFF = 3;
  }
  string repo_id = 1;
  string commit_id = 2;
  com.google.startupos.common.repo.File file = 3;
  int32 line_number = 4;
  bool is_done = 5;
  repeated Comment comment = 6;
  Type type = 7;
  string id = 8;
  // The index is 1-based. 0 marks an empty value.
  int32 github_comment_position = 9;
  int32 closest_github_comment_position = 10;
}

message Comment {
  string content = 1;
  int64 timestamp = 2;
  string created_by = 3;
  bool is_modified = 4;
  string id = 5;
  int64 github_comment_id = 6;
}
